# rubigene

rubigene/: README.md  __init__.py
rubigene/app/: __init__.py  build.sh  icon.icns.placeholder  pyproject.toml
rubigene/core/: __init__.py  config.yaml  difficulty_checker.py  pipeline.py  ruby_tag_generator.py  rubysubs_wrapper.py  srt_loader.py  tokenizer.py  translator.py  utils.py
rubigene/data/: cefr.csv  frequency.json  ngsl.csv  translation_cache.json
rubigene/gui/: NGSL_CEFR_dropdown_issue_analysis.md  __init__.py  app.py  components.py  main_window.py  style.qss
rubigene/tests/: __init__.py  test_difficulty_checker.py  test_pipeline.py  test_ruby_tag_generator.py  test_tokenizer.py  test_translator.py
rubigene/tools/: generate_cefr_csv.py  generate_cefr_csv_from_xlsx.py  generate_cefr_csv_from_zip.py  generate_frequency_json.py
