[project]
name = "rubigene"
version = "1.0.0"
description = "英語字幕に日本語ルビを自動付与するmacOSアプリケーション"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rubigene Team" }
]
keywords = ["subtitle", "ruby", "furigana", "srt", "ass", "translation", "deepl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "PySide6>=6.5.0",
    "spacy>=3.5.0",
    "chardet>=5.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
build = [
    "py2app>=0.28.0",
    "pyinstaller>=5.0.0",
]

[project.scripts]
rubigene = "rubigene.gui.app:main"

[project.gui-scripts]
rubigene-gui = "rubigene.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rubigene"]

[tool.hatch.build.targets.sdist]
include = [
    "rubigene/**/*.py",
    "rubigene/**/*.yaml",
    "rubigene/**/*.qss",
    "rubigene/**/*.csv",
    "rubigene/**/*.json",
    "rubigene/app/*.icns",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
